fix circles rendering offscreen bug

--- a/mystyle.css
+++ b/mystyle.css
@@ -5,14 +5,20 @@
 }
 
 html, body {
-  height: 100%;
   width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
   overflow: hidden;  /* Hide scrollbars */
   background-color: var(--canvas-background-color);
   -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
+  box-sizing: border-box;
+}
 
+#canvas {
+  width: 100%;
+  height: 100%;
+  padding: 30px;
 }
 
 /* Hides arrows in number input */
@@ -30,6 +36,7 @@ input[type=number] {
 #hamburger-icon {   
   padding: 4px;
   margin: 8px;
+  position: absolute;
  }
 
 .hamburger-line {
